# pomodoro_task_tracker

./: Makefile  README.md  alembic.ini  dependency.py  docker-compose.yaml  exception.py  gunicorn_conf.py  pomodoro.db  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 143d401b13e4_delete_access_token_from_user.py  2e0a4adc38cb_ref_user_profile.py  3c03bf43ffbb_add_optional_to_type_in_categories.py  5953cca37763_yandex_access_token_to_user_model.py  88e190b02ff6_extend_user_profile.py  ad2771734767_initial_migration.py  bdd76ac82c71_user_init.py  c80ddc498964_initial_commit.py  f11dce285193_user_id_in_tasks.py
app/: dependency.py  exception.py  main.py  settings.py
app/handlers/: ping.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task_rep.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/google_auth/: handlers.py
app/users/user_profile/: handlers.py  models.py  repository.py  service.py
cache/: accessor.py
client/: __init__.py  google_client.py  yandex.py
database/: accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task_rep.py  user.py
schema/: __init__.py  auth.py  s_task.py  s_user.py
service/: auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
(+8 files in other folders)
