[tool.poetry]
name = "pomodoro-analytics"
version = "0.1.0"
description = ""
authors = ["Nikita Kuznetsov <nkuz1509@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
psycopg2-binary = "^2.9.10"
redis = "^6.2.0"
psycopg = "^3.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
