[tool.poetry]
name = "pomodoro-analytics"
version = "0.1.0"
description = ""
authors = ["Nikita Kuznetsov <nkuz1509@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
psycopg2-binary = "^2.9.10"
redis = "^6.2.0"
psycopg = "^3.2.9"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
requests = "^2.32.4"
greenlet = "^3.2.3"
pytest = "^8.4.1"
anyio = "^4.9.0"
pytest-asyncio = "^1.0.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
twisted = "^25.5.0"
pytest-factoryboy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
